Bug 379709 - Avoid reflowing SVG twice during page load due to initially assuming we'll need space for a vertical scrollbar when the nsSVGOuterSVGFrame can tell us we won't. r=bz.